--- a/COIN/home.html
+++ b/COIN/home.html
@@ -65,7 +65,13 @@ MathJax.Hub.Config({
 <p><div id="News"></p>
 <h2>News</h2>
 <ul>
-<li><p>[10/2023] Mengyan Huang was awarded a Chinese government scholarship and joined COIN-Lab as a visiting PhD student. </p>
+<li><p>[01/2024] Jiahui Zhao was awarded the CSC scholarship and joined COIN-Lab as a visiting PhD student.</p>
+</li>
+<li><p>[12/2023] Congratulations! Mai Le successfully passed her PhD viva for the thesis titled &ldquo;Resource Allocation Optimization in Intelligent Wireless Networks&rdquo;.</p>
+</li>
+<li><p>[12/2023] Congratulations! Thanh Thien Dao successfully passed his PhD viva for the thesis titled &ldquo;Deep Learning-based Automatic Modulation Classification&rdquo;.</p>
+</li>
+<li><p>[10/2023] Mengyan Huang was awarded a Chinese government scholarship and joined COIN-Lab as a visiting PhD student.</p>
 </li>
 <li><p>[09/2023] Two PhD students, Tuan Tran and Linh Nguyen, joined COIN-Lab. Congratulations and welcome!</p>
 </li>
@@ -87,13 +93,13 @@ MathJax.Hub.Config({
 COIN-Lab is led by <a href="../index.html" target=&ldquo;blank&rdquo;>Dr. Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
 Our research is highly interdisciplinary and exploits an arsenal of tools from network optimization, game theory, machine learning, 
 statistics, and economics to design and build future network systems and improve emerging IT/wireless services and applications.
-Our research is sponsored by </p>
+</p>
 <p><div id="About COIN"></p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:12PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on December 27<sup>th</sup> 2023  11:45AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
