--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -56,9 +56,14 @@ Although I may not respond individually due to the volume of applications, I wil
 You will be contacted should further information is needed. 
 Students working with us are usually highly self-motivated and with strong mathematical and problem-solving skills. 
 You can get a sense of the style of our work by looking at <a href="../publication.html" target=&ldquo;blank&rdquo;>our publications</a>.</p>
-<p><b>Prospective Researchers</b>: Please check openings and contact us before your application preparation and application. Do give us a shout if you have any questions.</p>
+<p><b>Prospective Researchers</b>: Please check openings and contact us before your preparation and application. Do give us a shout if you have any questions.</p>
 <p><div id="Openings"></p>
 <h2>Openings</h2>
+<ul>
+<li><p><a href="https://www.irishaidfellowships.ie/strands/phd-research-programme" target=&ldquo;blank&rdquo;>PhD Research Programme</a> offered by the Irish Government is now open for Vietnamese students. <br />
+Please feel free to drop me an email if you want to study for one year at TCD and my research group. The submission deadline is 16 February 2024.</p>
+</li>
+</ul>
 <ul>
 <li><p>PhD Scholarship for Chinese students under the <a href="https://www.tcd.ie/study/international/scholarships/Postgraduate/csc.php" target=&ldquo;blank&rdquo;>China Scholarship Council – TCD Joint Scholarship Program</a> <br /></p>
 </li>
@@ -130,7 +135,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:12PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on November 27<sup>th</sup> 2023  10:41AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
