--- a/COIN/team.html
+++ b/COIN/team.html
@@ -55,7 +55,7 @@ MathJax.Hub.Config({
 <div id="text-img-container"><div id="img-container">
 <img src="./images/people/Portrait_Viet.jpg" alt="profile pic" width="150px" /></div>
 <div id="text-container"><p><div id="PI">
-<a href="https://www.scss.tcd.ie/viet.pham" target=&ldquo;blank&rdquo;><b>Viet Quoc Pham</b></a>, Ph.D.</p>
+<a href="https://www.scss.tcd.ie/viet.pham" target=&ldquo;blank&rdquo;><b>Viet Quoc Pham</b></a> (Phạm Quốc Việt)</p>
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
@@ -63,7 +63,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
-<li><p><a href="..\Misc\Curriculum_Vitae_Pham.pdf" target=&ldquo;blank&rdquo;>Curriculum Vitae</a>, 
+<li><p><a href="https://www.scss.tcd.ie/viet.pham/Misc/Curriculum_Vitae_Pham.pdf" target=&ldquo;blank&rdquo;>Full CV</a>, <a href="https://www.scss.tcd.ie/viet.pham/Misc/Curriculum_Vitae_Failure_Pham.pdf" target=&ldquo;blank&rdquo;>CV of Failure</a>,
 <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target=&ldquo;blank&rdquo;>Google Scholar</a>, 
 <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham" target=&ldquo;blank&rdquo;>ResearchGate</a>, 
 <a href="https://www.linkedin.com/in/pqv90/" target=&ldquo;blank&rdquo;>LinkedIn</a>, 
@@ -115,6 +115,20 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <p></div></p>
 </div></div>
 <div id="text-img-container"><div id="img-container">
+<img src="./images/people/jiahui.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Jiahui Zhao</b> (赵佳慧)</p>
+<ul>
+<li><p>PhD Student, Southeast University, 2020/09 &ndash; Present.</p>
+</li>
+<li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2024/01 - Present.</p>
+</li>
+<li><p>Research Topic: Semantic communication, mobile edge computing, deep reinforcement learning.</p>
+</li>
+</ul>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
 <img src="./images/people/hoc.png" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
 <a href="https://scholar.google.com.vn/citations?user=qUIEy3sAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Vu Thai Hoc</b></a> (Vũ Thái Học)</p>
@@ -129,7 +143,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <p></div></p>
 </div></div>
 <div id="text-img-container"><div id="img-container">
-<img src="./images/people/mai.png" alt="member pic" width="100px" /></div>
+<img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
 <div id="text-container"><p><div id="Student">
 <a href="https://scholar.google.com.vn/citations?user=Y776EGYAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;><b>Le Thi Mai</b></a> (Lê Thị Mai)</p>
 <ul>
@@ -137,7 +151,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 </li>
 <li><p>Visiting PhD Student, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, 2023/05 - Present.</p>
 </li>
-<li><p>PhD Thesis: AI-enabled resource allocation in intelligent wireless networks.</p>
+<li><p>PhD Thesis: Resource allocation optimization in intelligent wireless networks.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
@@ -151,7 +165,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 <ul>
 <li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do" target=&ldquo;blank&rdquo;>Pusan National University</a>, 2020/09 - Present.</p>
 </li>
-<li><p>Research Topic: Deep learning for automatic modulation classification and depth map.</p>
+<li><p>Research Topic: Deep learning-based automatic modulation classification.</p>
 </li>
 <li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
@@ -202,66 +216,119 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422" target=&ldq
 </div></div>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
-<p><b>Nadia Iradukunda</b> </p>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/nadia.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Nadia Iradukunda</b> </p>
 <ul>
 <li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/09 - 2022/08.</p>
+</li>
+<li><p>Research Topic: Resource allocation optimization for UAV wireless backhaul 5G networks.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: Lecturer, Mount Kenya University, Rwanda.</p>
 </li>
 </ul>
-<p><b>Le Thi Mai</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/mai.jpg" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Le Thi Mai</b> (Lê Thị Mai)</p>
 <ul>
 <li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2019/03 - 2021/02.</p>
+</li>
+<li><p>Research Topic: Swarm intelligence for D2D communications with unlicensed spectrum.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: PhD student, Pusan National University, Korea.</p>
 </li>
 </ul>
-<p><b>Vo Ta Hoang</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/hoangv.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Vo Ta Hoang</b> (Võ Tá Hoàng)</p>
 <ul>
 <li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2020/02.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: Lecturer, Thuyloi University, Vietnam.</p>
 </li>
 </ul>
-<p><b>Hoang Huu Trung</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/trung.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Hoang Huu Trung</b> (Hoàng Hữu Trung)</p>
 <ul>
 <li><p>PhD, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2018/09 - 2021/02.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: Lecturer, Hue University, Vietnam.</p>
 </li>
 </ul>
-<p><b>Nguyen Tien Hoang</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/hoangn.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Nguyen Tien Hoang</b> (Nguyễn Tiến Hoàng)</p>
 <ul>
 <li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
+</li>
+<li><p>Research Topic: Game theory for computation offloading in MEC networks.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: QA Project Leader, LG Innotek, Vietnam.</p>
 </li>
 </ul>
-<p><b>Maurice Nduwayezu</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/maurice.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Maurice Nduwayezu</b> </p>
 <ul>
 <li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
+</li>
+<li><p>Research Topic: Deep reinforcement learning for computation offloading in NOMA-MEC networks.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 <li><p>Current position: PhD student, SeoulTech, Korea.</p>
 </li>
 </ul>
-<p><b>Girmay Gebremariam Gebrelibanos</b> </p>
+<p></div></p>
+</div></div>
+<div id="text-img-container"><div id="img-container">
+<img src="./images/people/girum.png" alt="member pic" width="100px" /></div>
+<div id="text-container"><p><div id="Student">
+<b>Girmay Gebremariam Gebrelibanos</b> </p>
 <ul>
 <li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08. </p>
 </li>
-</ul>
-<p><b>Akmal Azizan bin Md Zin</b></p>
-<ul>
-<li><p>MSc, <a href="https://www.inje.ac.kr/english/" target=&ldquo;blank&rdquo;>Inje University</a>, 2017/09 - 2019/08.</p>
+<li><p>Research Topic: Swarm intelligence for D2D communications with unlicensed spectrum.</p>
+</li>
+<li><p>Co-supervision with Prof. Won-Joo Hwang.</p>
 </li>
 </ul>
 <p></div></p>
+</div></div>
 <h2>Group Outings</h2>
 <p>To be updated</p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on November 24<sup>th</sup> 2023  08:27PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on December 28<sup>th</sup> 2023  10:15AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
