--- a/activity.html
+++ b/activity.html
@@ -62,9 +62,11 @@ MathJax.Hub.Config({
 <ul>
 <li><p><a href="https://www.comsoc.org/publications/journals/ieee-comml" target=&ldquo;blank&rdquo;>IEEE Communications Letters</a>, 2023 - Present.</p>
 </li>
-<li><p><a href="https://www.nature.com/srep/" target=&ldquo;blank&rdquo;>Nature Scientific Reports</a>, 2022 - Present.</p>
+<li><p><a href="https://www.rev-jec.org/" target=&ldquo;blank&rdquo;>REV Journal on Electronics and Communications</a>, 2023 - Present.</p>
 </li>
 <li><p><a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications" target=&ldquo;blank&rdquo;>Journal of Network and Computer Applications</a>, 2020 - Present.</p>
+</li>
+<li><p><a href="https://www.nature.com/srep/" target=&ldquo;blank&rdquo;>Nature Scientific Reports</a>, 2022 - 2023.</p>
 </li>
 </ul>
 <p></div>
@@ -200,7 +202,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:40PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
