--- a/eduwork.html
+++ b/eduwork.html
@@ -59,11 +59,11 @@ MathJax.Hub.Config({
 <p><div id="Education"></p>
 <h2>Education</h2>
 <ul>
-<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Engineering, Inje University, Gimhae, Korea</p>
+<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Engineering, Inje University, Korea</p>
 </li>
-<li><p>Sep. 2013 - Aug. 2015: Master of Science (MSc) in Telecommunications, Inje University, Gimhae, Korea</p>
+<li><p>Sep. 2013 - Aug. 2015: Master of Science (MSc) in Telecommunications Engineering, Inje University, Korea</p>
 </li>
-<li><p>Sep. 2008 - Aug. 2013: Bachelor of Engineering (BEng) in Electronics and Telecommunications, Hanoi University of Science and Technology, Hanoi, Vietnam</p>
+<li><p>Sep. 2008 - Aug. 2013: Bachelor of Engineering (BSc) in Electronics and Telecommunications Engineering, Hanoi University of Science and Technology, Vietnam</p>
 </li>
 <li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
 </li>
@@ -117,7 +117,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  05:33PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
