--- a/index.html
+++ b/index.html
@@ -91,47 +91,50 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[12/2023] The two students whom I co-supervise, Mai Le and Thanh Thien Dao, successfully passed their PhD viva. Congratulations! </p>
+</li>
+<li><p>[11/2023] <font color=red size=+0.5><b>Hot!</b></font> I have have been selected as the winner of the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a>.
+</p>
+</li>
 <li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director.</p>
 </li>
-<li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
+<li><p>[07/2023] I have been invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
-<li><p>[05/2023] <font color=red size=+0.5>Hot!</font> I got the Enterprise Ireland Coordination Support Award. </p>
+<li><p>[05/2023] I got the Enterprise Ireland Coordination Support Award. </p>
 </li>
 <li><p>[01/2023] I have joined <a href="https://connectcentre.ie/" target=&ldquo;blank&rdquo;>SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/" target=&ldquo;blank&rdquo;>SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
-<li><p>[01/2023] <font color=red size=+0.5><b>New academic chapter!</b></font> I am currently with the <a href="https://www.scss.tcd.ie/" target=&ldquo;blank&rdquo;>School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>.</p>
-</li>
-<li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/" target=&ldquo;blank&rdquo;>Scientific Reports</a>. </p>
+<li><p>[01/2023] <font color=red size=+0.5><b>New academic chapter!</b></font> I am currently with the <a href="https://www.scss.tcd.ie/" target=&ldquo;blank&rdquo;>School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>.
+</p>
 </li>
 <li><p>[12/2021] I have received the golden globe award 2021 from the Ministry of Science and Technology, Vietnam. <br /></p>
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] <font color=red size=+0.5>Hot!</font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on edge learning (PI: <a href="mailto:tu.nguyen@nu.edu.kz" target=&ldquo;blank&rdquo;>Dr. Tu Nguyen</a>). <br /></p>
+<li><p>[10/2021] We won the FDCRGP Grant ($136,000) for our research on edge learning (PI: Dr. Tu Nguyen). <br /></p>
 </li>
-<li><p>[10/2020] <font color=red size=+0.5>Hot!</font> I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications" target=&ldquo;blank&rdquo;>Journal of Network and Computer Applications</a>.</p>
+<li><p>[10/2020] I have been invited as an editor of <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications" target=&ldquo;blank&rdquo;>Journal of Network and Computer Applications</a>.</p>
 </li>
-<li><p>[02/2019] <font color=red size=+0.5>Hot!</font> I have started my five-year project funded by Korea NRF (sole-PI, 500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
+<li><p>[02/2019] <font color=red size=+0.5><b>Hot!</b></font> I have started my five-year project funded by Korea NRF (sole-PI, 500M KRW, Feb. 2019 - Feb. 2024).</p>
 </li>
 </ul>
 <p></div></p>
-<p><div id="Selected Publication"></p>
-<h2>Selected Publication</h2>
+<p><div id="Selected Publications"></p>
+<h2>Selected Publications</h2>
 <ol>
-<li><p>M. Le, H. T. Dinh, D. N. Nguyen, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339" target=&rdquo;blank&ldquo;>Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2023.</p>
+<li><p>T.-T. Dao, D.-I. Noh, Q.-V. Pham, M. Hasegawa, H. Sekiya, and W.-J. Hwang, &ldquo;<a href="https://dx.doi.org/10.1109/LCOMM.2023.3336985" target=&rdquo;blank&ldquo;>VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; <i>IEEE Communications Letters</i>, 2024.</p>
 </li>
-<li><p>M.-D. Nguyen, Q.-V. Do, Z. Yang, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2309.14587" target=&rdquo;blank&ldquo;>Distortion Resilience for Goal-Oriented Semantic Communication</a>,&rdquo; 2023.</p>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339" target=&rdquo;blank&ldquo;>Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2024.</p>
 </li>
-<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, D. T. Hoang, Diep N. Nguyen, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2310.07497" target=&rdquo;blank&ldquo;>Sample-Driven Federated Learning for Energy-Efficient and Real-Time IoT Sensing</a>,&rdquo; 2023.</p>
-</li>
-<li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520" target=&rdquo;blank&ldquo;>Label-driven Federated Learning</a>,&rdquo; 2023.</p>
+<li><p>T.-H. Vu, Q.-V. Pham, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244" target=&rdquo;blank&ldquo;>THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2024.
+
+
+</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706" target=&rdquo;blank&ldquo;>Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327" target=&rdquo;blank&ldquo;>HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.
 </p>
-</li>
-<li><p>T.-H. Vu, Q.-V. Pham, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244" target=&rdquo;blank&ldquo;>THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
 <li><p>T.-H. Vu, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/LWC.2023.3315751" target=&rdquo;blank&ldquo;>Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2023.</p>
 </li>
@@ -155,29 +158,39 @@ and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" targe
 <p></div></p>
 <p><div id="Academic Bio"></p>
 <h2>Academic Bio</h2>
-<p>I am currently an Assistant Professor in the Networks and Distributed Systems Discipline at the School of Computer Science and Statistics, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Ireland. 
+<p>I am an Assistant Professor in the Networks and Distributed Systems Discipline at the School of Computer Science and Statistics, <a href="https://www.tcd.ie/" target=&ldquo;blank&rdquo;>Trinity College Dublin</a>, Ireland. 
 I am also a Supervisor with the <a href="https://www.advance-crt.ie/" target=&ldquo;blank&rdquo;>ADVANCE CRT centre</a> and an Associate Investigator at the <a href="https://connectcentre.ie/" target=&ldquo;blank&rdquo;>CONNECT centre</a>, Ireland. 
 Prior to joining TCD, I was in various academic positions with <a href="https://www.khu.ac.kr/" target=&ldquo;blank&rdquo;>Kyung Hee University</a>, <a href="https://www.changwon.ac.kr/" target=&ldquo;blank&rdquo;>Changwon National University</a>, and <a href="https://www.pusan.ac.kr/" target=&ldquo;blank&rdquo;>Pusan National University</a>. 
-I received the BSc degree and Ph.D. degree, both in telecommunications, from <a href="https://hust.edu.vn" target=&ldquo;blank&rdquo;>Hanoi University of Science and Technology</a> in 2013 and <a href="https://www.inje.ac.kr" target=&ldquo;blank&rdquo;>Inje University</a> in 2017, respectively. </p>
-<p>I specialise in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
-Specifically, I lead the <a href="https://www.scss.tcd.ie/viet.pham/COIN/home.html" target=&ldquo;blank&rdquo;>COIN Lab</a> and focus on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
-I was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
-I was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, IEEE ATC Best Paper Award in 2022, and Enterprise Ireland Coordination Support Award in 2023. 
-I am an Editor of IEEE Communications Letters, Journal of Network and Computer Applications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
-I am a senior member of the IEEE.</p>
+I received the BSc degree and Ph.D. degree, both in Telecommunications Engineering, from <a href="https://hust.edu.vn" target=&ldquo;blank&rdquo;>Hanoi University of Science and Technology</a> in 2013 and <a href="https://www.inje.ac.kr" target=&ldquo;blank&rdquo;>Inje University</a> in 2017, respectively. </p>
+<p>Broadly speaking, my research belongs to the areas of mobile edge networks (i.e., edge computing + wireless networks) and artificial intelligence (AI), the fields that are changing very dramatically and need a great effort from the research communities to realize a future 6G ecosystem in the 2030s. 
+My research interest is based on multidisciplinary approaches of computer science, telecommunications, and engineering mathematics for the practical design of complex and communication networks. 
+To be more specific, my research is motivated via three phases of modeling the network, analyzing the modeled network, and designing algorithms. 
+The first two phases are based on the use of various mathematical tools such as convex optimization, game theory, and machine learning, 
+whereas the third phase is to design robust, efficient, and scalable algorithms for efficient performance. 
+Based on that vision, I have led the <a href="https://www.scss.tcd.ie/viet.pham/COIN/home.html" target=&ldquo;blank&rdquo;>COIN Lab</a> and focused on three main thrusts, 
+including COmputing (e.g., cloud edge computing, aerial computing, edge of things, and edge AI), 
+Intelligence (e.g., wireless AI, deep learning, deep reinforcement learning, and federated learning), and
+Networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). </p>
+<p>I was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
+I was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, 
+the Golden Globe Award in Science and Technology for Younger Researchers in Vietnam in 2021, the IEEE ATC Best Paper Award in 2022, the IEEE MCE Best Paper Award in 2023,
+and the Enterprise Ireland Coordination Support Award in 2023.
+I was honoured with the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a> in recognition of my research activities for the benefit of the Society.  
+I am currently serving or have served as an (Associate) Editor of IEEE Communications Letters, Journal of Network and Computer Applications, REV Journal on Electronics and Communications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
+I am a senior member of the IEEE, the IEEE ComSoc, and the IEEE VTS.</p>
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
 <p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
 In Vietnamese, my first, middle, and last names are Viet, Quoc, and Pham, respectively.
-I use Quoc-Viet Pham as my author name in academic articles. Also, my TCD username is phamq, which is created based on my middle and last names. 
+I use Quoc-Viet Pham as my author name in academic articles. Also, my TCD username is phamq, which is created based on my first name and middle name. 
 I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
 <p></div></p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 25<sup>th</sup> 2023  10:20AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
