--- a/grantaward.html
+++ b/grantaward.html
@@ -65,6 +65,11 @@ MathJax.Hub.Config({
 Title: Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning
 </p>
 </li>
+<li><p>Vietnam NAFOSTED Basic Science and Research, 2 years <br /> 
+<b>Key Participant</b>. Project 102.02-2023.06 <br /> 
+Title: Improving Efficiency of Drone Surveillance Systems using Deep Learning
+</p>
+</li>
 <li><p>NRF Basic Science and Research (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
 <b>Principal Investigator</b>. Grant NRF-2019R1C1C1006143 <br /> 
 Title: Privacy Enhancing Connected Cars in 5G and Beyond
@@ -95,34 +100,38 @@ Pusan National University</p>
 <p><div id="Awards"></p>
 <h2>Awards and Prizes</h2>
 <ul>
+<li><p><a href="Misc/CEM_Awards_2024_3rd_Place.pdf">Best Paper Award, IEEE Consumer Electronics Magazine</a>, 2024.</p>
+</li>
+<li><p><a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award</a> for EMEA, 2023.</p>
+</li>
 <li><p>Coordination Support Award, Enterprise Ireland, 2023-2025.</p>
 </li>
 <li><p>TCD School of Computer Science and Statistics Award, 2023-2027.</p>
 </li>
-<li><p>Best paper award, IEEE International Conference on Advanced Technologies for Communications (ATC), 2022.</p>
+<li><p>Best Paper Award, IEEE International Conference on Advanced Technologies for Communications (ATC), 2022.</p>
 </li>
-<li><p>World's top 2% of scientists on Stanford University list, 2021-2023.</p>
+<li><p>World's top 2% of Scientists on Stanford University List, 2021-2023.</p>
 </li>
-<li><p>Golden globe award, Ministry of Science and Technology (Vietnam), 1,000,000 KRW, 2021.</p>
+<li><p><a href="https://tuoitre.vn/10-tai-nang-tre-nhan-giai-thuong-qua-cau-vang-2021-20211220084019839.htm" target=&ldquo;blank&rdquo;>Vietnam Golden Globe Award in Science and Technology for Young Researchers</a>, 2021.</p>
 </li>
-<li><p>Award for outstanding contributions and research excellence from Minister of Education (Korea), 2021.</p>
+<li><p>Award for Outstanding Contributions and Research Excellence from Minister of Education (Korea), 2021.</p>
 </li>
-<li><p>Top reviewer award, IEEE Transactions on Vehicular Technology, 2020.</p>
+<li><p><a href="Mis/Rv_Award_TVT_2020.pdf">Top Reviewer Award</a>, IEEE Transactions on Vehicular Technology, 2020.</p>
 </li>
-<li><p>Best PhD dissertation (rank #1) in engineering, Inje University, 1,000,000 KRW, Aug. 2017.</p>
+<li><p>Best PhD Dissertation (rank #1) in Engineering, Inje University, 2017.</p>
 </li>
-<li><p>Research scholarship for excellent students, Inje University, 500,000 KRW, 2016.</p>
+<li><p>Research Scholarship for Excellent Students, Inje University,2016.</p>
 </li>
-<li><p>Best research student award from Vietnamese student's association in Korea, 2015.</p>
+<li><p>Best Research Student Award from Vietnamese Student's Association in Korea, 2015.</p>
 </li>
-<li><p>Fully-funded postgraduate scholarships, Inje University, 72,000,000 KRW, 2013-2017.</p>
+<li><p>Fully-funded Postgraduate scholarships, Inje University, 2013-2017</p>
 </li>
 </ul>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 24<sup>th</sup> 2023  08:09PM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
