--- a/module.html
+++ b/module.html
@@ -59,6 +59,8 @@ MathJax.Hub.Config({
 <p><div id="Modules"></p>
 <h2>Modules</h2>
 <ul>
+<li><p>2024 Spring: Industrial / Research Lab Internship (CS7091)</p>
+</li>
 <li><p>2024 Spring: Microprocessor Systems (CSU23021)</p>
 </li>
 <li><p>2023 Spring: Microprocessor Systems (CSU23021)</p>
@@ -127,7 +129,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on November 25<sup>th</sup> 2023  10:03AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
