Update the pubs and activity 03 March 2024

--- a/activity.html
+++ b/activity.html
@@ -107,7 +107,7 @@ MathJax.Hub.Config({
 <p><div id="Technical Program Committee"></p>
 <h2>TPC / Invited Reviewer</h2>
 <ul>
-<li><p>2024: IEEE ICC, CITA</p>
+<li><p>2024: IEEE ICC, CITA, IEEE PIMRC, IFIP/IEEE Networking </p>
 </li>
 <li><p>2023: IEEE ICC, IEEE WCNC</p>
 </li>
@@ -123,6 +123,8 @@ MathJax.Hub.Config({
 <p><div id="Invited Referee for Journals"></p>
 <h2>Invited Referee for Journals</h2>
 <ul>
+<li><p>Nature Communications</p>
+</li>
 <li><p>IEEE Communications Letters</p>
 </li>
 <li><p>IEEE Wireless Communications Letters</p>
@@ -202,7 +204,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on March 3<sup>rd</sup> 2024  04:26PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
