--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@ MathJax.Hub.Config({
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
-<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5</p>
+<li><p>Telephone: +353-1-8968437</p>
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target=&ldquo;blank&rdquo;>Google Scholar</a>, 
 <a href="https://www.researchgate.net/profile/Viet-Pham-46" target=&ldquo;blank&rdquo;>ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/" target=&ldquo;blank&rdquo;>LinkedIn</a>, 
 <a href="https://orcid.org/0000-0002-9485-9216" target=&ldquo;blank&rdquo;>ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100" target=&ldquo;blank&rdquo;>Scopus</a>, 
-and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" target=&ldquo;blank&rdquo;>Web of Science</a></p>
+and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021" target=&ldquo;blank&rdquo;>Web of Science</a>
+</p>
 </li>
-<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin</p>
+<li><p>Office: 1.5, 13 Westland Row, Trinity College Dublin, Dublin 2, D02W272, Ireland</p>
 </li>
 </ul>
 </div></div>
@@ -175,8 +176,8 @@ Networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockch
 I was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, 
 the Golden Globe Award in Science and Technology for Younger Researchers in Vietnam in 2021, the IEEE ATC Best Paper Award in 2022, the IEEE MCE Best Paper Award in 2023,
 and the Enterprise Ireland Coordination Support Award in 2023.
-I was honoured with the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a> in recognition of my research activities for the benefit of the Society.  
-I am currently serving or have served as an (Associate) Editor of IEEE Communications Letters, Journal of Network and Computer Applications, REV Journal on Electronics and Communications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
+I was honoured with the <a href="https://www.comsoc.org/membership/chapters/find-chapter/europe-middle-east-africa-region-8/awards" target=&ldquo;blank&rdquo;>IEEE ComSoc Best Young Researcher Award for EMEA 2023</a> in recognition of my research activities for the benefit of the Society.  </p>
+<p>I am currently serving or have served as an (Associate) Editor of IEEE Communications Letters, Journal of Network and Computer Applications, REV Journal on Electronics and Communications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
 I am a senior member of the IEEE, the IEEE ComSoc, and the IEEE VTS.</p>
 <p></div></p>
 <p><div id="About Me"></p>
@@ -190,7 +191,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023. Last edited  on February 16<sup>th</sup> 2024  02:38AM (Time Zone: GMT Standard Time). </br>
+Copyright @2017-2023. Last edited  on February 26<sup>th</sup> 2024  12:47PM (Time Zone: GMT Standard Time). </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
